[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
cranelift-codegen = "0.116.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"


[profile.release]
# Tells `rustc` to optimize for small code size.
opt-level = "s"
debug = true